2001-07-26  Jonathan Larmour  <jlarmour@redhat.com>

	* library/prefs.tcl (pref_set_defaults): Add additional entry
	points for eCos if main is not present.

2001-07-21  Martin M. Hunt  <hunt@redhat.com>

	* library/interface.tcl (gdbtk_locate_main): Fix function 
	so that it returns either a null string or a valid location,
	as documented.

	* library/variables.tcl (build_menu_helper): Set
	the Format menu option to "disabled" initially.

2001-07-20  Martin M. Hunt  <hunt@redhat.com>

	* library/managedwin.itb: Revert to global to properly
	initialize geometry with some window managers.
	* library/managedwin.ith (shutdown): Remove _geometry.

	* library/memwin.itb: Fix syntax to open a new window
	using the "-force" flag.

	* generic/gdbtk-register.c (gdb_regnames): Fix 'if'
	statement so count is decremented only if "-numbers"
	is the first arg.

2001-07-18  Martin M. Hunt  <hunt@redhat.com>

	* library/util.tcl (find_iwidgets_library): Look
	for iwidgets3* so we don't accidently find iwidgets2.x.

2001-07-16  Nick Duffek  <nsd@redhat.com>

	* library/regwin.itb (RegWin::build_win): Add radio button
	for unsigned register format.
	(RegWin::reg_select): Iterate through 8 rather than 7 formats.
	(RegWin::but3): Add menu option for unsigned register format.

2001-07-13  Keith Seitz  <keiths@redhat.com>

	* library/download.itb (constructor): Use the iwidgets
	feedback widget instead of tixMeter.
	Pack all the topmost widgets together -- don't use grid.
	(update_download): Support the feedback widget.
	(done): Ditto.

	* library/download.ith (steps): New private variable.
	(num_steps): New common.

2001-07-12  Keith Seitz  <keiths@redhat.com>

	* library/srcbar.itcl (create_trace_buttons): Fix
	syntax errors.

	* library/tracedlg.tcl: Update to work with Itcl3.0
	and ManagedWin.

	* library/actiondlg.tcl: Update to work with Itcl3.0
	and ManagedWin.
	(build_win): Use iwidgets scrolled listbox instead
	of the tix one.

2001-07-05  Keith Seitz  <keiths@redhat.com>
